--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "flickity": "^2.2.2",
+    "flickity-fade": "^1.0.0",
+    "fullpage.js": "^3.1.1",
     "vue": "^2.6.14",
     "vue-click-outside": "^1.1.0",
     "vue-template-compiler": "^2.6.14"
