--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "flickity": "^2.2.2",
@@ -15,7 +16,8 @@
     "fullpage.js": "^3.1.1",
     "vue": "^2.6.14",
     "vue-click-outside": "^1.1.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-font-preload-plugin": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
