--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "flickity": "^2.2.2",
     "flickity-fade": "^1.0.0",
     "fullpage.js": "^3.1.1",
+    "stylelint-a11y": "^1.2.3",
+    "stylelint-config-wordpress": "^15.0.0",
     "vue": "^2.6.14",
     "vue-click-outside": "^1.1.0",
     "vue-template-compiler": "^2.6.14",
